[B]Version 1.3.8 (Nov 8, 2012)[/B]
- Added additional error checking upon launch of the addon to ensure the correct sagex plugins are installed (and if they aren't it will kick you back to the main menu after informing you of the issue)
- Added in initial language translations for German, Slovak, Spanish, Swedish, Lithuanian, and Portuguese (Brazil)

[B]Version 1.3.7 (Nov 1, 2012)[/B]
- Streamlined initial check for the sagex-api-services plugin upon launch of the addon; this should enable loading the addon's main menu much faster
- **Note that this change requires you to copy the updated xbmc.js file to your sagetv\sagex\services folder

[B]Version 1.3.6 (Nov 1, 2012)[/B]
- Handle SageTV recording path setting that is with and without a trailing slash (previously the addon didn't work if you didn't include the trailing slash in your recording path)

[B]Version 1.3.5 (Oct 30, 2012)[/B]
- Fixed UTF8 issue when browsing channels and searching (missed those in the previous fix)

[B]Version 1.3.4 (Oct 17, 2012)[/B]
- Improved display of show titles that contain special (non-ASCII) characters (added UTF8 support)

[B]Version 1.3.3 (Oct 16, 2012)[/B]
- Added new streaming quality setting and enhanced "Watch (Stream)" context menu to force what quality to stream the recording back as (note that this is a workaround to using the standard streaming URL which does not work due to a bug in ffmpeg that we're waiting to get fixed)
- Added "Add/Remove Favorite" show level context menu items

[B]Version 1.3.2 (Oct 16, 2012)[/B]
- Added show level context menu items to enable "Set All Watched", "Clear All Watched", and "Delete All" which takes action on all episodes within a show

[B]Version 1.3.1 (Oct 13, 2012)[/B]
- Added "Watch (Streamed)" context menu item which enables playing back via using SageTV remote services
- Fixed file/watched duration issue where "None" wasn't handled

[B]Version 1.3.0 (Oct 9, 2012)[/B]